--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
-<div id="app"></div>
-<blockquote class="imgur-embed-pub" lang="en" data-id="a/CjrEWiQ" data-context="false" ><a href="//imgur.com/a/CjrEWiQ"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+
+<div align="center">
+<video width="600" height="420" autoplay>
+  <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
+Your browser does not support the video tag.
+</video>
+</div>
