--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+<body>
 <div align="center">
 <video width="600" height="420" autoplay>
   <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
 </div>
+</body>
+</html>
