--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <div align="center">
-<video width="600" height="420" autoplay>
+<video width="600" height="420" autoplay loop>
   <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
