--- a/index.html
+++ b/index.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html>
-<body>
+
+</html>
+
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="color-scheme" content="light dark">
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+>
+    <title>Hello world!</title>
+  </head>
+  <body>
 <div align="center">
 <video width="600" height="420" autoplay loop muted>
   <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
