--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
 >
-    <title>Hello world!</title>
+    <title>Game Jawns Inc HQ</title>
   </head>
   <body>
-<div align="center">
-<video width="600" height="420" autoplay loop muted>
+  <main class="container-fluid" align="center">
+    <video autoplay loop muted>
   <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
-</div>
+  </main>
 </body>
 </html>
