--- a/index.html
+++ b/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html>
-
-</html>
-
 <!doctype html>
 <html lang="en">
   <head>
+  
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark">
@@ -15,12 +11,24 @@
 >
     <title>Game Jawns Inc HQ</title>
   </head>
-  <body>
+  <body align="center">
+  <nav>
+  <ul>
+    <li><strong>Game Jawns Inc</strong></li>
+  </ul>
+  <ul>
+    <li><a href="#">Pitch</a></li>
+    <li><a href="#">Game Link</a></li>
+    <li><a href="#">About Me</a></li>
+  </ul>
+</nav>
+  <header>TEST</header>
   <main class="container-fluid" align="center">
     <video autoplay loop muted>
   <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
 Your browser does not support the video tag.
 </video>
   </main>
+  <footer>FOOT</footer>
 </body>
 </html>
