--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>Game Jawns Inc HQ</title>
   </head>
   <body align="center">
-  <nav>
+  <nav style="margin:10px 20px">
   <ul>
-    <li><strong>Game Jawns Inc</strong></li>
+    <li><h1 style="margin:0px"><strong>Game Jawns Inc</strong></h1></li>
   </ul>
   <ul>
     <li><a href="#">Pitch</a></li>
