testing image upload

--- a/index.html
+++ b/index.html
@@ -7,28 +7,92 @@
     <meta name="color-scheme" content="light dark">
     <link
   rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css"
+  href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.yellow.min.css"
 >
     <title>Game Jawns Inc HQ</title>
   </head>
   <body align="center">
-  <nav style="margin:10px 20px">
+  <nav class="container">
   <ul>
-    <li><h1 style="margin:0px"><strong>Game Jawns Inc</strong></h1></li>
+    <li><div role="group"><h2><strong>Game Jawns Inc HQ&nbsp;&nbsp;&nbsp;</strong></h2><img src="256.png" alt="Logo"/></div></li>
   </ul>
   <ul>
-    <li><a href="#">Pitch</a></li>
-    <li><a href="#">Game Link</a></li>
+    <li><a href="#">Pitch</a></li>•
+    <li><a href="#">Game Link</a></li>•
     <li><a href="#">About Me</a></li>
   </ul>
 </nav>
-  <header>TEST</header>
-  <main class="container-fluid" align="center">
-    <video autoplay loop muted>
-  <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
-Your browser does not support the video tag.
-</video>
+
+<figure>
+  <video align="center" width = 400 autoplay loop muted>
+    <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
+    NO MP4 SUPPORT ON YOUR BROWSER!
+  </video>
+  <figcaption>
+	<i>All Foes</i> targeting
+  </figcaption>
+</figure>
+
+<article class="container">
+  <header>First Post</header>
+  <main role="group">
+  
+  <section>Lorum iipson akfjbasfjblafn asfd as as gag
+  
+ <hr />
+ 
+  <details open>
+  <summary>Accordion 1</summary>
+  <p>...</p>
+</details>
+
+<hr />
+
+<details>
+  <summary>Accordion 2</summary>
+  <ul>
+    <li>...</li>
+    <li>...</li>
+  </ul>
+</details>
+<hr />
+  </section>
   </main>
-  <footer>FOOT</footer>
+  <footer>Footer</footer>
+</article>
+
+
+<article class="container">
+  <header>First Post</header>
+  <main role="group">
+  <video align="center" width = 400 autoplay loop muted>
+    <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
+    NO MP4 SUPPORT ON YOUR BROWSER!
+  </video>
+  <section>Lorum iipson akfjbasfjblafn asfd as as gag
+  
+ <hr />
+ 
+  <details open>
+  <summary>Accordion 1</summary>
+  <p>...</p>
+</details>
+
+<hr />
+
+<details>
+  <summary>Accordion 2</summary>
+  <ul>
+    <li>...</li>
+    <li>...</li>
+  </ul>
+</details>
+<hr />
+  </section>
+  </main>
+  <footer>Footer</footer>
+</article>
+
+
 </body>
 </html>
