--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
-  
+	<style>
+	details, p {
+		padding:10px;
+		margin:10px;
+	}
+	.cardheader{
+	    margin-top:1rem;
+	}
+	</style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark">
@@ -14,7 +22,7 @@
   <body align="center">
   <nav class="container">
   <ul>
-    <li><div role="group"><h2><strong>Game Jawns Inc HQ&nbsp;&nbsp;&nbsp;</strong></h2><img src="256.png" alt="Logo"/></div></li>
+    <li><div role="group"><img width=50 src="256.png" alt="Logo"/>&nbsp;&nbsp;&nbsp;<h2><strong>Game Jawns Inc HQ</strong></h2></div></li>
   </ul>
   <ul>
     <li><a href="#">Pitch</a></li>•
@@ -23,21 +31,24 @@
   </ul>
 </nav>
 
-<figure>
-  <video align="center" width = 400 autoplay loop muted>
-    <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
-    NO MP4 SUPPORT ON YOUR BROWSER!
-  </video>
-  <figcaption>
-	<i>All Foes</i> targeting
-  </figcaption>
-</figure>
+
 
 <article class="container">
-  <header>First Post</header>
+  <header><h1 class="cardheader">First Post</h1></header>
   <main role="group">
-  
-  <section>Lorum iipson akfjbasfjblafn asfd as as gag
+	<!--
+	<figure>
+	<video align="center" width = 400 autoplay loop muted>
+		<source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
+		NO MP4 SUPPORT ON YOUR BROWSER!
+	</video>
+	<figcaption>
+		<i>All Foes</i> targeting
+	</figcaption>
+	</figure>
+	-->
+  <section>
+  <p align="left">Lorum iipson akfjbasfjblafn asfd as as gag</p>
   
  <hr />
  
@@ -58,39 +69,7 @@
 <hr />
   </section>
   </main>
-  <footer>Footer</footer>
-</article>
-
-
-<article class="container">
-  <header>First Post</header>
-  <main role="group">
-  <video align="center" width = 400 autoplay loop muted>
-    <source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
-    NO MP4 SUPPORT ON YOUR BROWSER!
-  </video>
-  <section>Lorum iipson akfjbasfjblafn asfd as as gag
-  
- <hr />
- 
-  <details open>
-  <summary>Accordion 1</summary>
-  <p>...</p>
-</details>
-
-<hr />
-
-<details>
-  <summary>Accordion 2</summary>
-  <ul>
-    <li>...</li>
-    <li>...</li>
-  </ul>
-</details>
-<hr />
-  </section>
-  </main>
-  <footer>Footer</footer>
+  <footer><h1 class="cardheader">11/29/2024</h1></footer>
 </article>
 
 
