--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
   <body align="center">
   <nav class="container">
   <ul>
-    <li><div role="group"><img width=50 height=50 src="256.png" alt="Logo"/>&nbsp;&nbsp;&nbsp;<h2><strong>Game Jawns Inc HQ</strong></h2></div></li>
+    <li><div role="group"><img width=40 height=40 src="256.png" alt="Logo"/>&nbsp;&nbsp;&nbsp;<h3>GameJawnsInc</h3></div></li>
   </ul>
   <ul>
-    <li><h3><a href="#"><button class="secondary">Pitch</button></a>&nbsp;&nbsp;&nbsp;•</h3></li>
-    <li><h3><a href="#"><button class="secondary">Game Link</button></a>&nbsp;&nbsp;&nbsp;•</h3></li>
-    <li><h3><a href="#"><button class="secondary">About Me</button></a></h3></li>
+    <li><h5><a href="#"><button class="secondary">Pitch</button></a>&nbsp;&nbsp;&nbsp;•</h5></li>
+    <li><h5><a href="#"><button class="secondary">Game Link</button></a>&nbsp;&nbsp;&nbsp;•</h5></li>
+    <li><h5><a href="#"><button class="secondary">About Me</button></a></h5></li>
   </ul>
 </nav>
 
