--- a/index.html
+++ b/index.html
@@ -20,18 +20,21 @@
     <title>Game Jawns Inc HQ</title>
   </head>
   <body align="center">
-  <nav class="container">
-  <ul>
-    <li><div role="group"><img width=40 height=40 src="256.png" alt="Logo"/>&nbsp;&nbsp;&nbsp;<h3>GameJawnsInc</h3></div></li>
-  </ul>
-  <ul>
-    <li><h5><a href="#"><button class="secondary">Pitch</button></a>&nbsp;&nbsp;&nbsp;•</h5></li>
-    <li><h5><a href="#"><button class="secondary">Game Link</button></a>&nbsp;&nbsp;&nbsp;•</h5></li>
-    <li><h5><a href="#"><button class="secondary">About Me</button></a></h5></li>
-  </ul>
-</nav>
+	<hr>
+  <h1>GameJawnsInc&nbsp;&nbsp;&nbsp;&nbsp;<img width="80" height="80" src="256.png" alt="Logo"></h1>
+	<hr>
 
+<div class="container">
+  <div class="grid" >
+	
+	<a href="#"><button class="secondary"style="min-width:150px">Pitch</button></a>
+	<a href="#"><button class="secondary"style="min-width:150px">Game Link</button></a>
+	<a href="#"><button class="secondary"style="min-width:150px">About Me</button></a>
+	
+  </div>
+</div>
 
+<hr>
 
 <article class="container">
   <header><h1 class="cardheader">First Post</h1></header>
