--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
   </head>
   <body align="center">
 	<hr>
-  <h1>GameJawnsInc&nbsp;&nbsp;&nbsp;&nbsp;<img width="80" height="80" src="256.png" alt="Logo"></h1>
+
+  <h1><hgroup><h1>GameJawnsInc</h1><p align="center">Solo Gamedev Blog</p></hgroup></h1>
+  
+
 	<hr>
 
-<div class="container">
+<div class="container"style="max-width:600px">
   <div class="grid" >
-	
-	<a href="#"><button class="secondary"style="min-width:150px">Pitch</button></a>
-	<a href="#"><button class="secondary"style="min-width:150px">Game Link</button></a>
-	<a href="#"><button class="secondary"style="min-width:150px">About Me</button></a>
+	<a href="pitch.html"><button class="secondary"style="min-width:180px">Pitch</button></a>
+	<a href="https://jawnston.itch.io/jawn-rpg"><button class="secondary"style="min-width:180px">Link to Game</button></a>
+	<a href="#"><button class="secondary"style="min-width:180px">About Me</button></a>
 	
   </div>
 </div>
@@ -51,24 +53,18 @@
 	</figure>
 	-->
   <section>
-  <p align="left">Lorum iipson akfjbasfjblafn asfd as as gag</p>
+  <p>Check out these timelapse videos of my game dev. Gonna do some posts here with pictures and code.</p>
   
  <hr />
- 
-  <details open>
-  <summary>Accordion 1</summary>
-  <p>...</p>
-</details>
+<h4>Timelapse 2</h4><hr>
+<a href="https://youtu.be/jUHXZMhrDTg"><button class="secondary"style="min-width:180px">Youtube Link</button></a>
+ <hr />
+ <hr />
+<h4>Timelapse 1</h4><hr>
+<a href="https://youtu.be/aRN1Hm21-sU"><button class="secondary"style="min-width:180px">Youtube Link</button></a>
+ <hr />
 
-<hr />
 
-<details>
-  <summary>Accordion 2</summary>
-  <ul>
-    <li>...</li>
-    <li>...</li>
-  </ul>
-</details>
 <hr />
   </section>
   </main>
