--- a/pitch.html
+++ b/pitch.html
@@ -29,7 +29,7 @@
 
 <div class="container"style="max-width:600px">
   <div class="grid" >
-	<a href="https://jawnston.itch.io/jawn-rpg"><button class="secondary"style="min-width:180px">Back</button></a>
+	<a href="index.html"><button class="secondary"style="min-width:180px">Back</button></a>
 	
   </div>
 </div>
@@ -51,17 +51,8 @@
 	</figure>
 	-->
   <section>
-  <p>Check out these timelapse videos of my game dev. Gonna do some posts here with pictures and code.</p>
+  <p align="left">JawnRPG is my rpg project. Build a party with customizable jobs/skills/stats. Explore dungeons, dangerous paths, and towns.<br>Throwback to ps1 rpgs mixed with flash games. combat is as micro-heavy or auto-battler styled as you want it to be.</p>
   
- <hr />
-<h4>Timelapse 2</h4><hr>
-<a href="https://youtu.be/jUHXZMhrDTg"><button class="secondary"style="min-width:180px">Youtube Link</button></a>
- <hr />
- <hr />
-<h4>Timelapse 1</h4><hr>
-<a href="https://youtu.be/aRN1Hm21-sU"><button class="secondary"style="min-width:180px">Youtube Link</button></a>
- <hr />
-
 
 <hr />
   </section>
