--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	<style>
-	details, p {
+	p {
 		padding:10px;
 		margin:10px;
 	}
@@ -31,7 +31,7 @@
   <div class="grid" >
 	<a href="pitch.html"><button class="secondary"style="min-width:180px">Pitch</button></a>
 	<a href="https://jawnston.itch.io/jawn-rpg"><button class="secondary"style="min-width:180px">Link to Game</button></a>
-	<a href="#"><button class="secondary"style="min-width:180px">About Me</button></a>
+	<a href="aboutme.html"><button class="secondary"style="min-width:180px">About Me</button></a>
 	
   </div>
 </div>
@@ -39,19 +39,9 @@
 <hr>
 
 <article class="container">
-  <header><h1 class="cardheader">First Post</h1></header>
+  <header><h2 class="cardheader">First Post</h2></header>
   <main role="group">
-	<!--
-	<figure>
-	<video align="center" width = 400 autoplay loop muted>
-		<source src="https://i.imgur.com/V5XD58e.mp4" type="video/mp4">
-		NO MP4 SUPPORT ON YOUR BROWSER!
-	</video>
-	<figcaption>
-		<i>All Foes</i> targeting
-	</figcaption>
-	</figure>
-	-->
+
   <section>
   <p>Check out these timelapse videos of my game dev. Gonna do some posts here with pictures and code.</p>
   
@@ -68,7 +58,7 @@
 <hr />
   </section>
   </main>
-  <footer><h1 class="cardheader">11/29/2024</h1></footer>
+  <footer><h5 class="cardheader">Written 11/29/2024</h5></footer>
 </article>
 
 
