--- a/pitch.html
+++ b/pitch.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
 	<style>
-	details, p {
+	p {
 		padding:10px;
 		margin:10px;
 	}
@@ -36,8 +36,8 @@
 
 <hr>
 
-<article class="container">
-  <header><h1 class="cardheader">First Post</h1></header>
+<article class="container"  style="max-width:1000px">
+  <header><h1 class="cardheader">What is JawnRPG?</h1></header>
   <main role="group">
 	<!--
 	<figure>
@@ -51,13 +51,49 @@
 	</figure>
 	-->
   <section>
-  <p align="left">JawnRPG is my rpg project. Build a party with customizable jobs/skills/stats. Explore dungeons, dangerous paths, and towns.<br>Throwback to ps1 rpgs mixed with flash games. combat is as micro-heavy or auto-battler styled as you want it to be.</p>
+  <p align="left">JawnRPG is my rpg project. Build a party with customizable jobs/skills/stats. Explore dungeons, dangerous paths, and towns. Throwback to ps1 rpgs mixed with flash games.</p>
+
+<p align="left">It's an ATB combat system <i>(Chrono Trigger, FFIX, etc)</i> with freedom of movement. Control your party manually, or with formations and AI. Party members will either cycle through off-cooldown skills, follow AI, or wait for manual control.</p>
+  <p>See some combat below!</p>
   
 
 <hr />
+
+
+
+<figure>
+	<video align="center" width = 800 autoplay loop muted>
+		<source src="https://i.imgur.com/M64qo4o.mp4" type="video/mp4">
+		NO MP4 SUPPORT ON YOUR BROWSER!
+	</video>
+	<figcaption>
+		Solo combat in <i>Bloom Grove</i><br>
+		The Jester's <i>Warp Mind</i>
+			<video align="center" width = 40 autoplay loop muted>
+			<source src="https://i.imgur.com/ODVr1D6.mp4" type="video/mp4">
+				NO MP4 SUPPORT ON YOUR BROWSER!
+			</video>
+		 debuff increases the amount of time between attacks for the Tree foe.
+	</figcaption>
+	</figure>
+
+<hr />
+
+<figure>
+	<video align="center" width = 800 autoplay loop muted>
+		<source src="https://i.imgur.com/aUUcnXC.mp4" type="video/mp4">
+		NO MP4 SUPPORT ON YOUR BROWSER!
+	</video>
+	<figcaption>
+		Party Combat in the <i>Colosseum</i>
+	</figcaption>
+	</figure>
+	
+	<hr />
+
   </section>
   </main>
-  <footer><h1 class="cardheader">11/29/2024</h1></footer>
+  <footer><h5 class="cardheader">Written 12/2/2024</h5></footer>
 </article>
 
 
