--- a/pitch.html
+++ b/pitch.html
@@ -9,6 +9,10 @@
 	.cardheader{
 	    margin-top:1rem;
 	}
+	video {
+    width: 100%;
+    height: auto;
+	}
 	</style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -69,7 +73,7 @@
 	<figcaption>
 		Solo combat in <i>Bloom Grove</i><br>
 		The Jester's <i>Warp Mind</i>
-			<video align="center" width = 40 autoplay loop muted>
+			<video align="center" style="width:40px" width = 40 autoplay loop muted>
 			<source src="https://i.imgur.com/ODVr1D6.mp4" type="video/mp4">
 				NO MP4 SUPPORT ON YOUR BROWSER!
 			</video>
