--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.yellow.min.css"
 >
     <title>Game Jawns Inc HQ</title>
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body align="center">
 	<hr>
